; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libfetch/extr_http.c_fetchReqHTTP.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libfetch/extr_http.c_fetchReqHTTP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.url = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @fetchReqHTTP(%struct.url* %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca %struct.url*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store %struct.url* %0, %struct.url** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load %struct.url*, %struct.url** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load %struct.url*, %struct.url** %6, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @http_get_proxy(%struct.url* %13, i8* %14)
  %16 = load i8*, i8** %8, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = call i32* @http_request_body(%struct.url* %11, i8* %12, i32* null, i32 %15, i8* %16, i8* %17, i8* %18)
  ret i32* %19
}

declare dso_local i32* @http_request_body(%struct.url*, i8*, i32*, i32, i8*, i8*, i8*) #1

declare dso_local i32 @http_get_proxy(%struct.url*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
